--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -6,11 +6,11 @@
   "aboutMapiahDialogWindowTitle": "Sobre o Mapiah",
   "appTitle": "Mapiah",
   "buttonClose": "Fechar",
-  "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
   "fileEditWindowWindowTitle": "Edição de arquivo",
-  "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
   "helpDialogFailureToLoad": "Falha ao carregar o conteúdo de ajuda",
   "helpDialogTooltip": "Ajuda (F1)",
+  "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
+  "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
   "mapiahHomeAboutMapiahDialog": "Sobre o Mapiah",
   "mapiahHomeHelpDialogTitle": "Tela inicial",
   "mapiahHomeLanguage": "Idioma",
@@ -18,13 +18,13 @@
   "mapiahHomeOpenFile": "Abrir arquivo (Ctrl+O ou Ctrl+Shift+O)",
   "mapiahKeyboardShortcutsTitle": "Atalhos de teclado",
   "mapiahKeyboardShortcutsTooltip": "Atalhos de teclado (Ctrl+K)",
+  "mpAltitudeInvalidValueErrorMessage": "Altitude inválida",
   "mpAngleUnitDegree": "grau",
   "mpAngleUnitGrad": "grad",
   "mpAngleUnitMil": "mil",
   "mpAngleUnitMinute": "minuto",
-  "mpAltitudeInvalidValueErrorMessage": "Altitude inválida",
-  "mpAreaBordersPanelTitle": "Bordas da área",
   "mpAreaBordersAddButton": "Adicionar borda",
+  "mpAreaBordersPanelTitle": "Bordas da área",
   "mpAttrNameEmpty": "Nome do atributo vazio",
   "mpAttrNameInvalid": "Nome de atributo com characteres inválidos",
   "mpAttrNameLabel": "Nome",
@@ -32,14 +32,14 @@
   "mpAttrValueLabel": "Valor",
   "mpAuthorInvalidValueErrorMessage": "Data/intervalo de data e nome de autor válidos",
   "mpAzimuthAzimuthLabel": "Azimute",
+  "mpAzimuthEast": "Leste",
+  "mpAzimuthEastAbbreviation": "L",
   "mpAzimuthInvalidErrorMessage": "Azimute inválido",
   "mpAzimuthNorth": "Norte",
-  "mpAzimuthSouth": "Sul",
-  "mpAzimuthEast": "Leste",
-  "mpAzimuthWest": "Oeste",
   "mpAzimuthNorthAbbreviation": "N",
+  "mpAzimuthSouth": "Sul",
   "mpAzimuthSouthAbbreviation": "S",
-  "mpAzimuthEastAbbreviation": "L",
+  "mpAzimuthWest": "Oeste",
   "mpAzimuthWestAbbreviation": "O",
   "mpButtonCancel": "Cancelar",
   "mpButtonCreate": "Criar",
@@ -72,10 +72,10 @@
   "mpCommandDescriptionMoveLines": "Mover linhas",
   "mpCommandDescriptionMoveLineSegments": "Mover segmentos de linha",
   "mpCommandDescriptionMovePoint": "Mover ponto",
+  "mpCommandDescriptionMoveStraightLineSegment": "Mover segmento de linha reta",
   "mpCommandDescriptionMultipleElements": "Editar vários elementos",
   "mpCommandDescriptionRemoveArea": "Apagar área",
   "mpCommandDescriptionRemoveAreaBorderTHID": "Apagar borda de área",
-  "mpCommandDescriptionMoveStraightLineSegment": "Mover segmento de linha reta",
   "mpCommandDescriptionRemoveElements": "Apagar elementos",
   "mpCommandDescriptionRemoveLine": "Apagar linha",
   "mpCommandDescriptionRemoveLineSegment": "Apagar segmento de linha",
@@ -100,8 +100,8 @@
   "mpCopyrightMessageLabel": "Direitos autorais",
   "mpCSEPSGESRILabel": "Identificador {csOption} (1-99999)",
   "mpCSETRSLabel": "Identificador opcional ETRS (1-99999)",
-  "mpCSInvalidValueErrorMessage": "Valor inválido",
   "mpCSForOutputLabel": "Para saída",
+  "mpCSInvalidValueErrorMessage": "Valor inválido",
   "mpCSOSGBMajorLabel": "OSGB principal",
   "mpCSOSGBMinorLabel": "OSGB menor",
   "mpCSUTMZoneNumberLabel": "Número da zona UTM (1-60)",
@@ -117,17 +117,18 @@
   "mpDimensionsAboveLabel": "Acima",
   "mpDimensionsBelowLabel": "Abaixo",
   "mpDimensionsInvalidValueErrorMessage": "Valor inválida",
-  "mpDistInvalidValueErrorMessage": "Distância inválida",
   "mpDistDistanceLabel": "Distância",
+  "mpDistInvalidValueErrorMessage": "Distância inválida",
   "mpDoubleValueInvalidValueErrorMessage": "Valor inválido",
+  "mpEditSingleLineStateStatusBarMessage": "Editando linha",
   "mpEncodingLabel": "Codificação",
   "mpErrorReadingXVIFile": "Erro ao ler arquivo XVI",
   "mpExploredLengthLabel": "Extensão",
   "mpExtendStationLabel": "Base",
+  "mpIDIDLabel": "ID",
   "mpIDInvalidValueErrorMessage": "ID inválido: deve ser uma sequência de caracteres A-Z, a-z, 0-9 e _-/ (não começando com ‘-’).",
   "mpIDMissingErrorMessage": "ID é obrigatório.",
   "mpIDNonUniqueValueErrorMessage": "IDs devem ser únicos.",
-  "mpIDIDLabel": "ID",
   "mpLengthUnitCentimeter": "centímetro",
   "mpLengthUnitCentimeterAbbreviation": "cm",
   "mpLengthUnitFoot": "pé",
@@ -138,32 +139,37 @@
   "mpLengthUnitMeterAbbreviation": "m",
   "mpLengthUnitYard": "jarda",
   "mpLengthUnitYardAbbreviation": "yd",
-  "mpLineHeightInvalidValueErrorMessage": "Altura inválida",
   "mpLineHeightHeightLabel": "Altura",
+  "mpLineHeightInvalidValueErrorMessage": "Altura inválida",
   "mpLineSegmentTypeTypesTitle": "Tipo de segmento de linha",
   "mpLSizeLabel": "Tamanho",
   "mpMarkTextLabel": "Identificador",
+  "mpMovingElementsStateAreasLinesAndPointsStatusBarMessage": "Movendo {pointsAmount} ponto(s), {linesAmount} linha(s), e {areaAmount} área(s)",
+  "mpMovingEndControlPointsStateBarMessage": "Movendo {endPointsAmount} pontos de controle",
+  "mpMovingSingleControlPointStateBarMessage": "Movendo ponto de controle",
   "mpMultipleElementsClickedAllChoice": "Todos",
   "mpMultipleElementsClickedTitle": "Vários elementos clicados",
   "mpMultipleEndControlPointsClickedTitle": "Vários pontos clicados",
   "mpMultipleEndControlPointsControlPoint1": "Ponto de controle 1",
   "mpMultipleEndControlPointsControlPoint2": "Ponto de controle 2",
   "mpMultipleEndControlPointsEndPoint": "Ponto final",
-  "mpNamedScaleTiny": "Minúsculo",
-  "mpNamedScaleSmall": "Pequeno",
-  "mpNamedScaleNormal": "Normal",
-  "mpNamedScaleLarge": "Grande",
   "mpNamedScaleHuge": "Enorme",
+  "mpNamedScaleLarge": "Grande",
+  "mpNamedScaleNormal": "Normal",
+  "mpNamedScaleSmall": "Pequeno",
+  "mpNamedScaleTiny": "Minúsculo",
   "mpNameStationLabel": "Base",
   "mpNewScrapDialogCreateNewScrap": "Criar novo croqui",
-  "mpNewScrapDialogCreateScrapIDLabel": "ID do croqui",
   "mpNewScrapDialogCreateScrapIDHint": "Digite o identificador do croqui",
+  "mpNewScrapDialogCreateScrapIDLabel": "ID do croqui",
+  "mpNonEmptySelectionStateAreasLinesAndPointsStatusBarMessage": "{pointsAmount} pontos(s), {linesAmount} linhas(s), e {areaAmount} área(s) selecionados",
   "mpOptionsEditLineSegmentTypes": "Tipos de segmentos de linha",
+  "mpOptionsEditTitle": "Opções",
   "mpPassageHeightCeiling": "Teto",
   "mpPassageHeightCeilingLabel": "Teto",
   "mpPassageHeightDepth": "Profundidade",
-  "mpPassageHeightDepthWarning": "Profundidade inválida",
   "mpPassageHeightDepthLabel": "Profundidade",
+  "mpPassageHeightDepthWarning": "Profundidade inválida",
   "mpPassageHeightDistanceBetweenFloorAndCeiling": "Do piso ao teto",
   "mpPassageHeightDistanceBetweenFloorAndCeilingLabel": "Piso ao teto",
   "mpPassageHeightDistanceToCeilingAndDistanceToFloor": "Teto e piso",
@@ -171,19 +177,19 @@
   "mpPassageHeightFloor": "Piso",
   "mpPassageHeightFloorLabel": "Piso",
   "mpPassageHeightHeight": "Altura",
-  "mpPassageHeightHeightWarning": "Altura inválida",
   "mpPassageHeightHeightLabel": "Altura",
+  "mpPassageHeightHeightWarning": "Altura inválida",
+  "mpPersonNameHint": "'Nome Sobrenome' ou 'Nomes/Sobrenomes'",
   "mpPersonNameInvalidFormatErrorMessage": "Nome inválido",
   "mpPersonNameLabel": "Nome",
-  "mpPersonNameHint": "'Nome Sobrenome' ou 'Nomes/Sobrenomes'",
   "mpPLATypeAll": "Todos",
-  "mpPLATypeNone": "Nenhum",
   "mpPLATypeAreaTitle": "Tipos de área",
   "mpPLATypeCurrent": "Atual",
   "mpPLATypeDropdownSelectATypeLabel": "Selecione um tipo",
   "mpPLATypeLastUsed": "Últimos usados",
   "mpPLATypeLineTitle": "Tipos de linha",
   "mpPLATypeMostUsed": "Mais usados",
+  "mpPLATypeNone": "Nenhum",
   "mpPLATypePointTitle": "Tipos de ponto",
   "mpPLATypeUnknownInvalid": "Tipo inválido",
   "mpPLATypeUnknownLabel": "Tipo",
@@ -191,14 +197,14 @@
   "mpPLScaleCommandOptionNumeric": "Numérico",
   "mpPLScaleNumericLabel": "Tamanho",
   "mpPointHeightChimney": "Chaminé",
-  "mpPointHeightValueChimneyLabel": "Altura",
-  "mpPointHeightPit": "Poço",
-  "mpPointHeightValuePitLabel": "Profundidade",
-  "mpPointHeightStep": "Degrau",
-  "mpPointHeightValueStepLabel": "Altura",
   "mpPointHeightLengthWarning": "Medida inválida",
+  "mpPointHeightPit": "Poço",
+  "mpPointHeightStep": "Degrau",
+  "mpPointHeightValueChimneyLabel": "Altura",
   "mpPointHeightValueChimneyObservation": "Altura do teto (tratado como positivo)",
+  "mpPointHeightValuePitLabel": "Profundidade",
   "mpPointHeightValuePitObservation": "Profundidade do poço (tratado como negativo)",
+  "mpPointHeightValueStepLabel": "Altura",
   "mpPointHeightValueStepObservation": "Altura do degrau (tratado como positivo)",
   "mpProjectionAngleWarning": "Ângulo inválido (0 <= ângulo < 360)",
   "mpProjectionElevationAzimuthLabel": "Azimute",
@@ -207,16 +213,16 @@
   "mpProjectionModeExtended": "Retificada",
   "mpProjectionModeNone": "Nenhuma",
   "mpProjectionModePlan": "Planta baixa",
-  "mpOptionsEditTitle": "Opções",
+  "mpScrapFreeText": "Texto livre",
+  "mpScrapFromFile": "Deste arquivo",
+  "mpScrapLabel": "ID de croqui",
+  "mpScrapScale11Label": "Real",
   "mpScrapScale1ValueLabel": "Real para 1 ponto",
   "mpScrapScale1ValueObservation": "Medida real por ponto do desenho",
-  "mpScrapScale11Label": "Real",
-  "mpScrapScale2ValuesLabel": "Real para pontos",
-  "mpScrapScale2ValueObservation": "Medida real por pontos do desenho",
   "mpScrapScale21Label": "Desenho",
   "mpScrapScale22Label": "Real",
-  "mpScrapScale8ValuesLabel": "Coordenadas reais por coordenadas do desenho",
-  "mpScrapScale8ValueObservation": "Coordenadas reais por coordenadas do desenho",
+  "mpScrapScale2ValueObservation": "Medida real por pontos do desenho",
+  "mpScrapScale2ValuesLabel": "Real para pontos",
   "mpScrapScale81Label": "X1 desenho",
   "mpScrapScale82Label": "Y1 desenho",
   "mpScrapScale83Label": "X2 desenho",
@@ -225,10 +231,9 @@
   "mpScrapScale86Label": "Y1 real",
   "mpScrapScale87Label": "X2 real",
   "mpScrapScale88Label": "Y2 real",
-  "mpScrapFreeText": "Texto livre",
-  "mpScrapFromFile": "Deste arquivo",
+  "mpScrapScale8ValueObservation": "Coordenadas reais por coordenadas do desenho",
+  "mpScrapScale8ValuesLabel": "Coordenadas reais por coordenadas do desenho",
   "mpScrapScaleInvalidValueError": "Referência de escala inválida",
-  "mpScrapLabel": "ID de croqui",
   "mpScrapWarning": "Croqui não definido",
   "mpSketchChooseFileButtonLabel": "Escolher arquivo",
   "mpSketchCoordinateInvalid": "Coordenada inválida",
@@ -237,9 +242,9 @@
   "mpSketchYLabel": "Y",
   "mpSnapLinePointTargetsLabel": "Ajuste a pontos de linha",
   "mpSnapPointTargetsLabel": "Ajuste a pontos",
-  "mpSnapTargetNone": "Nenhum",
   "mpSnapTargetLinePoint": "Pontos de linha",
   "mpSnapTargetLinePointByType": "Pontoss de linha por tipo de linha",
+  "mpSnapTargetNone": "Nenhum",
   "mpSnapTargetPoint": "Pontos",
   "mpSnapTargetPointByType": "Pontos por tipo",
   "mpSnapTargetXVIFileGridLine": "Linhas de grade",
@@ -258,16 +263,6 @@
   "mpStationTypeOptionWarning": "Base não definida",
   "mpSubtypeEmpty": "Subtipo vazio",
   "mpSubtypeLabel": "Subtipo",
-  "mpSubtypePointAirDraughtWinter": "Inverno",
-  "mpSubtypePointAirDraughtSummer": "Verão",
-  "mpSubtypePointAirDraughtUndefined": "Indefinido",
-  "mpSubtypePointStationTemporary": "Temporário",
-  "mpSubtypePointStationPainted": "Pintado",
-  "mpSubtypePointStationNatural": "Natural",
-  "mpSubtypePointStationFixed": "Fixo",
-  "mpSubtypePointWaterFlowPermanent": "Permanente",
-  "mpSubtypePointWaterFlowIntermittent": "Intermitente",
-  "mpSubtypePointWaterFlowPaleo": "Paleofluxo",
   "mpSubtypeLineBorderInvisible": "Invisível",
   "mpSubtypeLineBorderPresumed": "Presumido",
   "mpSubtypeLineBorderTemporary": "Temporário",
@@ -289,15 +284,24 @@
   "mpSubtypeLineWallSand": "Areia",
   "mpSubtypeLineWallUnderlying": "Subjacente",
   "mpSubtypeLineWallUnsurveyed": "Não levantada",
-  "mpSubtypeLineWaterFlowPermanent": "Permanente",
   "mpSubtypeLineWaterFlowConjectural": "Conjectural",
   "mpSubtypeLineWaterFlowIntermittent": "Intermitente",
+  "mpSubtypeLineWaterFlowPermanent": "Permanente",
+  "mpSubtypePointAirDraughtSummer": "Verão",
+  "mpSubtypePointAirDraughtUndefined": "Indefinido",
+  "mpSubtypePointAirDraughtWinter": "Inverno",
+  "mpSubtypePointStationFixed": "Fixo",
+  "mpSubtypePointStationNatural": "Natural",
+  "mpSubtypePointStationPainted": "Pintado",
+  "mpSubtypePointStationTemporary": "Temporário",
+  "mpSubtypePointWaterFlowIntermittent": "Intermitente",
+  "mpSubtypePointWaterFlowPaleo": "Paleofluxo",
+  "mpSubtypePointWaterFlowPermanent": "Permanente",
   "mpTextTextLabel": "Texto",
   "mpTextTypeOptionWarning": "Texto não definido",
   "mpTitleTextLabel": "Título",
   "mpUnrecognizedCommandOptionTextLabel": "Opção não reconhecida",
   "parsingErrors": "Erros na interpretação do arquivo",
-  "th2FileEditPageHelpDialogTitle": "Ajuda para edição de arquivo TH2",
   "th2FileEditPageAddArea": "Criar área (A)",
   "th2FileEditPageAddAreaStatusBarMessage": "Selecione uma linha para ser incluída como borda da nova área do tipo {type}",
   "th2FileEditPageAddElementOptions": "Criar elemento",
@@ -308,30 +312,28 @@
   "th2FileEditPageAddPoint": "Criar ponto (P)",
   "th2FileEditPageAddPointStatusBarMessage": "Clique para criar um ponto do tipo {type}",
   "th2FileEditPageAddScrapButton": "Adicionar croqui (S)",
-  "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+S)",
   "th2FileEditPageChangeActiveScrapTitle": "Alterar croqui ativo",
+  "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+S)",
   "th2FileEditPageChangeImageTitle": "Alterar imagens",
   "th2FileEditPageChangeImageTool": "Alterar imagem (Alt+I)",
   "th2FileEditPageEmptySelectionStatusBarMessage": "Nenhum elemento selecionado",
+  "th2FileEditPageHelpDialogTitle": "Ajuda para edição de arquivo TH2",
   "th2FileEditPageLoadImageButton": "Carregar imagem",
   "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
   "th2FileEditPageNodeEditTool": "Editar nós (N)",
-  "th2FileEditPageNonEmptySelectionOnlyLinesStatusBarMessage": "{amount} linha(s) selecionadas",
-  "th2FileEditPageNonEmptySelectionOnlyPointsStatusBarMessage": "{amount} pontos(s) selecionados",
-  "th2FileEditPageNonEmptySelectionPointsAndLinesStatusBarMessage": "{pointsAmount} pontos(s) e {linesAmount} linhas(s) selecionados",
-  "th2FileEditPageNoUndoAvailable": "Nenhuma ação para desfazer",
   "th2FileEditPageNoRedoAvailable": "Nenhuma ação para refazer",
+  "th2FileEditPageNoUndoAvailable": "Nenhuma ação para desfazer",
   "th2FileEditPageOptionTool": "Opções (O)",
   "th2FileEditPagePanTool": "Mover ponto de vista",
+  "th2FileEditPageRedo": "Refazer '{redoDescription}' (Ctrl+Y)",
   "th2FileEditPageRemoveButton": "Apagar (Del)",
   "th2FileEditPageRemoveImageButton": "Remover imagem",
   "th2FileEditPageRemoveScrapButton": "Remover croqui",
   "th2FileEditPageSave": "Salvar (Ctrl+S)",
   "th2FileEditPageSaveAs": "Salvar como (Shift+Ctrl+S)",
   "th2FileEditPageSaveAsDialogTitle": "Salvar arquivo TH2 como",
-  "th2FileEditPageSnapButton": "Ajustar a pontos",
-  "th2FileEditPageRedo": "Refazer '{redoDescription}' (Ctrl+Y)",
   "th2FileEditPageSelectTool": "Selecionar (C)",
+  "th2FileEditPageSnapButton": "Ajustar a pontos",
   "th2FileEditPageUndo": "Desfazer '{undoDescription}' (Ctrl+Z)",
   "th2FileEditPageZoomIn": "Aproximar (+)",
   "th2FileEditPageZoomOneToOne": "Mostrar 1:1 (1)",
@@ -396,12 +398,12 @@
   "thCommandOptionLSize": "Tamanho L",
   "thCommandOptionMark": "Marca",
   "thCommandOptionName": "Base",
-  "thCommandOptionOutline": "Contorno",
   "thCommandOptionOrientation": "Orientação",
+  "thCommandOptionOutline": "Contorno",
   "thCommandOptionPassageHeightValue": "Altura da Passagem",
   "thCommandOptionPlace": "Lugar",
-  "thCommandOptionPointHeightValue": "Altura do Ponto",
   "thCommandOptionPLScale": "Escala",
+  "thCommandOptionPointHeightValue": "Altura do Ponto",
   "thCommandOptionProjection": "Projeção",
   "thCommandOptionRebelays": "Rebelays",
   "thCommandOptionReverse": "Reverter",
@@ -429,8 +431,8 @@
   "thElementEndScrap": "Fim de croqui",
   "thElementLine": "Linha",
   "thElementLineSegment": "Segmento de linha",
-  "thElementMultilineCommentContent": "Conteúdo de comentário multilinha",
   "thElementMultilineComment": "Comentário multilinha",
+  "thElementMultilineCommentContent": "Conteúdo de comentário multilinha",
   "thElementPoint": "Ponto",
   "thElementScrap": "Croqui",
   "thElementStraightLineSegment": "Segmento de linha reta",
@@ -487,14 +489,14 @@
   "thMultipleChoiceAlignTop": "Superior",
   "thMultipleChoiceAlignTopLeft": "Superior Esquerdo",
   "thMultipleChoiceAlignTopRight": "Superior Direito",
-  "thMultipleChoiceOnOffOff": "Desligado",
-  "thMultipleChoiceOnOffOn": "Ligado",
-  "thMultipleChoiceOnOffAutoAuto": "Automático",
-  "thMultipleChoiceFlipNone": "Nenhum",
   "thMultipleChoiceArrowPositionBegin": "Início",
   "thMultipleChoiceArrowPositionBoth": "Ambos",
   "thMultipleChoiceArrowPositionEnd": "Fim",
+  "thMultipleChoiceFlipNone": "Nenhum",
   "thMultipleChoiceLinePointGradientPoint": "Ponto",
+  "thMultipleChoiceOnOffAutoAuto": "Automático",
+  "thMultipleChoiceOnOffOff": "Desligado",
+  "thMultipleChoiceOnOffOn": "Ligado",
   "thMultipleChoiceOutlineIn": "Dentro",
   "thMultipleChoiceOutlineOut": "Fora",
   "thMultipleChoicePlaceDefault": "Padrão",
