--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -48,6 +48,7 @@
   "mpChoiceUnset": "Não definido",
   "mpCommandDescriptionAddArea": "Adicionar área",
   "mpCommandDescriptionAddAreaBorderTHID": "Adicionar borda de área",
+  "mpCommandDescriptionAddElement": "Adicionar elemento",
   "mpCommandDescriptionAddElements": "Adicionar elementos",
   "mpCommandDescriptionAddLine": "Adicionar linha",
   "mpCommandDescriptionAddLineSegment": "Adicionar segmento de linha",
@@ -76,6 +77,7 @@
   "mpCommandDescriptionMultipleElements": "Editar vários elementos",
   "mpCommandDescriptionRemoveArea": "Apagar área",
   "mpCommandDescriptionRemoveAreaBorderTHID": "Apagar borda de área",
+  "mpCommandDescriptionRemoveElement": "Apagar elemento",
   "mpCommandDescriptionRemoveElements": "Apagar elementos",
   "mpCommandDescriptionRemoveLine": "Apagar linha",
   "mpCommandDescriptionRemoveLineSegment": "Apagar segmento de linha",
