--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -50,6 +50,7 @@
   "mpCommandDescriptionAddAreaBorderTHID": "Adicionar borda de área",
   "mpCommandDescriptionAddElement": "Adicionar elemento",
   "mpCommandDescriptionAddElements": "Adicionar elementos",
+   "mpCommandDescriptionAddEmptyLine": "Adicionar linha vazia",
   "mpCommandDescriptionAddLine": "Adicionar linha",
   "mpCommandDescriptionAddLineSegment": "Adicionar segmento de linha",
   "mpCommandDescriptionAddPoint": "Adicionar ponto",
@@ -79,6 +80,7 @@
   "mpCommandDescriptionRemoveAreaBorderTHID": "Apagar borda de área",
   "mpCommandDescriptionRemoveElement": "Apagar elemento",
   "mpCommandDescriptionRemoveElements": "Apagar elementos",
+  "mpCommandDescriptionRemoveEmptyLine": "Apagar linha vazia",
   "mpCommandDescriptionRemoveLine": "Apagar linha",
   "mpCommandDescriptionRemoveLineSegment": "Apagar segmento de linha",
   "mpCommandDescriptionRemoveLineSegments": "Apagar segmentos de linha",
