--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -50,7 +50,7 @@
   "mpCommandDescriptionAddAreaBorderTHID": "Adicionar borda de área",
   "mpCommandDescriptionAddElement": "Adicionar elemento",
   "mpCommandDescriptionAddElements": "Adicionar elementos",
-   "mpCommandDescriptionAddEmptyLine": "Adicionar linha vazia",
+  "mpCommandDescriptionAddEmptyLine": "Adicionar linha vazia",
   "mpCommandDescriptionAddLine": "Adicionar linha",
   "mpCommandDescriptionAddLineSegment": "Adicionar segmento de linha",
   "mpCommandDescriptionAddPoint": "Adicionar ponto",
@@ -265,6 +265,16 @@
   "mpStationsNameEmpty": "Nome vazio",
   "mpStationsNameLabel": "Base",
   "mpStationTypeOptionWarning": "Base não definida",
+  "mpStatusBarMessageSingleSelectedAreaAreaBordersList": " - {areaBordersCount} borda(s): {areaBordersList}",
+  "mpStatusBarMessageSingleSelectedAreaNoAreaBorders": "sem bordas definidas",
+  "mpStatusBarMessageSingleSelectedAreaType": "Área {areaType}",
+  "mpStatusBarMessageSingleSelectedElementID": ", ID: {elementID}",
+  "mpStatusBarMessageSingleSelectedElementSubtype": ", subtipo {subtype}",
+  "mpStatusBarMessageSingleSelectedLineLineSegmentsCount": " - {lineSegmentsCount} segmento(s) ({straightLineSegmentsCount} reto(s), {bezierLineSegmentsCount} Bézier)",
+  "mpStatusBarMessageSingleSelectedLineNoLineSegments": " - sem segmentos",
+  "mpStatusBarMessageSingleSelectedLineParentArea": " - borda de '{parentArea}'",
+  "mpStatusBarMessageSingleSelectedLineType": "Linha {lineType}",
+  "mpStatusBarMessageSingleSelectedPointType": "Ponto {pointType}",
   "mpSubtypeEmpty": "Subtipo vazio",
   "mpSubtypeLabel": "Subtipo",
   "mpSubtypeLineBorderInvisible": "Invisível",
