--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -99,6 +99,7 @@
   "mpCommandDescriptionSimplifyToStraight": "Simplificar transformando em linha reta",
   "mpCommandDescriptionSubstituteLineSegments": "Substituir segmentos de linha",
   "mpCommandDescriptionToggleReverseOption": "Alternar opção de reversão de linha",
+  "mpCommandDescriptionToggleSmoothOption": "Alternar opção de suavização de linha",
   "mpContextInvalidValueErrorMessage": "Ambos os campos são obrigatórios",
   "mpCopyrightInvalidMessageErrorMessage": "Mensagem de direitos autorais inválido",
   "mpCopyrightMessageLabel": "Direitos autorais",
@@ -325,7 +326,7 @@
   "th2FileEditPageAddLineToAreaStatusBarMessage": "Selecione uma linha para ser incluída como borda da área {type} selecionada",
   "th2FileEditPageAddPoint": "Criar ponto (P)",
   "th2FileEditPageAddPointStatusBarMessage": "Clique para criar um ponto do tipo {type}",
-  "th2FileEditPageAddScrapButton": "Adicionar croqui (S)",
+  "th2FileEditPageAddScrapButton": "Adicionar croqui (K)",
   "th2FileEditPageChangeActiveScrapTitle": "Alterar croqui ativo",
   "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+S)",
   "th2FileEditPageChangeImageTitle": "Alterar imagens",
