--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -203,6 +203,8 @@
   "mpPLScaleNumericLabel": "Tamanho",
   "mpPointHeightChimney": "Chaminé",
   "mpPointHeightLengthWarning": "Medida inválida",
+  "mpPointHeightPresumedMinus": "Presumido negativo (-?)",
+  "mpPointHeightPresumedPlus": "Presumido positivo (+?)",
   "mpPointHeightPit": "Poço",
   "mpPointHeightStep": "Degrau",
   "mpPointHeightValueChimneyLabel": "Altura",
