--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -44,6 +44,7 @@
   "mpButtonCancel": "Cancelar",
   "mpButtonCreate": "Criar",
   "mpButtonOK": "OK",
+  "mpChoiceMultipleValues": "vários valores",
   "mpChoiceSet": "Definido",
   "mpChoiceUnset": "Não definido",
   "mpCommandDescriptionAddArea": "Adicionar área",
@@ -268,6 +269,8 @@
   "mpStationsNameEmpty": "Nome vazio",
   "mpStationsNameLabel": "Base",
   "mpStationTypeOptionWarning": "Base não definida",
+  "mpStatusBarMessageEditLinePointOrientationLSize": "Orientação: {orientation}°{forcedOrientation}, tamanho: {lsize}{forcedLSize}",
+  "mpStatusBarMessageEditLinePointOrientationLSizeForced": " (forçado)",
   "mpStatusBarMessageSingleSelectedAreaAreaBordersList": " - {areaBordersCount} borda(s): {areaBordersList}",
   "mpStatusBarMessageSingleSelectedAreaNoAreaBorders": "sem bordas definidas",
   "mpStatusBarMessageSingleSelectedAreaType": "Área {areaType}",
