--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -6,6 +6,9 @@
   "aboutMapiahDialogWindowTitle": "Sobre o Mapiah",
   "appTitle": "Mapiah",
   "buttonClose": "Fechar",
+  "updateAvailableTitle": "Atualização disponível",
+  "updateAvailableBody": "Uma versão mais recente está disponível.\n\nAtual: {currentVersion}\nMais recente: {latestVersion} ({tagName})\n\nDownload: {releaseUrl}",
+  "updateDialogOpenButton": "Abrir",
   "fileEditWindowWindowTitle": "Edição de arquivo",
   "helpDialogFailureToLoad": "Falha ao carregar o conteúdo de ajuda",
   "helpDialogTooltip": "Ajuda (F1)",
